# lab2_OC

./: CMakeLab2.cpp  CMakeLab2.h  CMakeLists.txt  tests.cpp
